Front matter and formatting

--- a/checklists.tex
+++ b/checklists.tex
@@ -7,7 +7,7 @@ things better too).
 
 \seclbl{Scheduling the Event}{sec:scheduling-the-event}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Decide if it will be in person, online for one site, or online for
@@ -39,11 +39,11 @@ things better too).
   Make sure people are added to whatever online registration system is
   being used.
 
-\end{enumerate}
+\end{genumerate}
 
 \seclbl{Setting Up}{sec:setting-up}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Set up a one-page website for the workshop.
@@ -66,7 +66,7 @@ things better too).
 \item
   Email attendees a welcome message that includes:
 
-  \begin{itemize}
+  \begin{gitemize}
 
     \item
       a link to the workshop home page
@@ -77,13 +77,13 @@ things better too).
     \item
       a description of any pre-requisite tasks
 
-  \end{itemize}
+  \end{gitemize}
 
-\end{enumerate}
+\end{genumerate}
 
 \seclbl{During the Event}{sec:during-the-event}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Remind everyone of the code of conduct.
@@ -103,11 +103,11 @@ things better too).
 \item
   Explain how to contribute to lessons.
 
-\end{enumerate}
+\end{genumerate}
 
 \seclbl{After the Event}{sec:after-the-event}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Update online records of who participated in what role.
@@ -124,11 +124,11 @@ things better too).
 \item
   Oversee final demonstrations.
 
-\end{enumerate}
+\end{genumerate}
 
 \seclbl{Between Instructor Training Sessions}{sec:between-instructor-training-sessions}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Sign up to lead group lesson discussions.
@@ -136,11 +136,11 @@ things better too).
 \item
   Monitor lessons for contributions and give feedback.
 
-\end{enumerate}
+\end{genumerate}
 
 \seclbl{After Trainees Complete}{sec:after-trainees-complete}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Send new instructors a completion message.
@@ -148,7 +148,7 @@ things better too).
 \item
   Create certificates and send them to learners.
 
-\end{enumerate}
+\end{genumerate}
 
 Note that trainers do not examine their own trainees: having them
 examine each other's helps balance load and maintain consistency of
