--- a/conduct.tex
+++ b/conduct.tex
@@ -36,7 +36,7 @@ actions.  Therefore we have chosen to prohibit certain forms of
 behaviour in our community, regardless of intent.  Prohibited
 harassing behaviour includes but is not limited to:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   written or verbal comments which have the effect of excluding people
@@ -68,7 +68,7 @@ harassing behaviour includes but is not limited to:
 \item
   publication of private communication without consent.
 
-\end{itemize}
+\end{gitemize}
 
 Behaviour not explicitly mentioned above may still constitute
 harassment.  The list above should not be taken as exhaustive but
