--- a/guide.tex
+++ b/guide.tex
@@ -4,7 +4,7 @@ This appendix includes material that doesn't naturally fit anywhere else.
 
 \seclbl{Further Reading}{sec:guide-reading}
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Ambrose et al's \emph{How Learning Works} \cite{bib:ambrose-hlw} is
@@ -53,7 +53,7 @@ This appendix includes material that doesn't naturally fit anywhere else.
   how women and some racial minorities are systematically pushed out
   of computing, and what can be done about it.
 
-\end{itemize}
+\end{gitemize}
 
 \seclbl{Starting Out}{sec:guide-starting}
 
@@ -122,7 +122,7 @@ and having them, and their peers, critique those recordings. We were
 introduced to this practice by UBC's Warren Code, and it has evolved to
 the following:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   On day 1, show trainees a short clip (3-4 minutes) of someone teaching
@@ -150,11 +150,11 @@ the following:
   rejoins the class; each person puts all the feedback on themselves
   into the shared notes.
 
-\end{enumerate}
+\end{genumerate}
 
 In order for this exercise to work well:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Groups must be physically separated to reduce audio cross-talk
@@ -184,7 +184,7 @@ In order for this exercise to work well:
   recovery, and draw attention afterward to the fact that you did
   this.
 
-\end{itemize}
+\end{gitemize}
 
 The announcement of this exercise is often greeted with groans and
 apprehension, since few people enjoy seeing or hearing themselves.
@@ -199,7 +199,7 @@ rubric to follow.
 \noindent
 \textbf{\href{https://youtu.be/bXxBeNkKmJE}{Part 1}: how not to do it}
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Instructor ignores a red sticky clearly visible on a learner's
@@ -230,12 +230,12 @@ rubric to follow.
   Instructor makes a mistake (a typo) but simply fixes it without
   pointing it out, and redoes the command.
 
-\end{itemize}
+\end{gitemize}
 
 \noindent
 \textbf{\href{https://youtu.be/SkPmwe\_WjeY}{Part 2}: how to do it right}
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Instructor checks if the learner with the red sticky on her laptop
@@ -267,7 +267,7 @@ rubric to follow.
   Instructor makes mistake (a typo) and uses the occasion to
   illustrate how to interpret error-messages.
 
-\end{itemize}
+\end{gitemize}
 
 \seclbl{Motivation and Demotivation}{sec:guide-motivation}
 
@@ -287,7 +287,7 @@ co-located groups and the instructor participates remotely.
 
 This was the first format we used, and we no longer recommend it.
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   We met every week or every second week for an hour using Google
@@ -323,14 +323,14 @@ This was the first format we used, and we no longer recommend it.
   was hard to find things once there were more than a dozen homework
   categories.
 
-\end{itemize}
+\end{gitemize}
 
 \subseclbl{Two-Day In-Person}{sec:two-day-in-person-currently-used}
 
 This was the second method we tried. The biggest change was the
 introduction of recorded teaching exercises.
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Several times during the training, participants are divided into
@@ -356,14 +356,14 @@ introduction of recorded teaching exercises.
   note-taking and for posting exercise solutions and feedback on
   recorded lessons.  Questions and discussion are done aloud.
 
-\end{itemize}
+\end{gitemize}
 
 \subseclbl{Two-Day Online With Groups}{sec:two-day-online-with-groups-currently-used}
 
 In this format, learners are in groups of 4-12, but those groups are
 geographically distributed.
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   We use Google Hangouts and either Etherpad or Google Docs as in the
@@ -377,7 +377,7 @@ geographically distributed.
 \item
   We do the video lecture exercise as in the two-day in-person training.
 
-\end{itemize}
+\end{gitemize}
 
 \seclbl{Effecting Change}{sec:effecting-change}
 
@@ -450,7 +450,7 @@ they teach.  Their findings are summarized in this table:
 
 The eight italicized approaches are:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   \emph{Diffusion}: STEM undergraduate instruction will be changed by
@@ -502,7 +502,7 @@ The eight italicized approaches are:
   collective action of self-organizing groups within the system. This
   collective action can be stimulated, but not controlled.
 
-\end{itemize}
+\end{gitemize}
 
 \seclbl{Why We Are Not a MOOC}{sec:why-were-not-a-mooc}
 
