--- a/lessons.tex
+++ b/lessons.tex
@@ -2,7 +2,7 @@
 
 Most people design lessons as follows:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Someone tells you that you have to teach something you haven't
@@ -22,7 +22,7 @@ Most people design lessons as follows:
   You stay awake into the wee hours of the morning to create a final
   exam.
 
-\end{enumerate}
+\end{genumerate}
 
 There's a better way, but to explain it, we first need to explain how
 \emph{\href{https://en.wikipedia.org/wiki/Test-driven\_development}{test-driven
@@ -49,7 +49,7 @@ method is something called \emph{reverse instructional design} or
 with that name \cite{bib:wiggins-mctighe}).  There are several
 variations, but the one we recommend has the following steps:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Create learner profiles (discussed in the next section) to figure
@@ -79,7 +79,7 @@ variations, but the one we recommend has the following steps:
   three or four such episodes, each building toward a short check that
   learners are keeping up.
 
-\end{enumerate}
+\end{genumerate}
 
 This method helps to keep teaching focused on its objectives. It also
 ensures that learners don't face anything on the final exam that the
@@ -134,7 +134,7 @@ the course will help them, and any special needs they might have. A
 learner profile for a weekend workshop aimed at new college students
 might be:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Jorge has just moved from Costa Rica to Canada to study agricultural
@@ -163,7 +163,7 @@ might be:
   to keep up with spoken conversation (especially if it involves a lot
   of new jargon).
 
-\end{enumerate}
+\end{genumerate}
 
 A single learner profile is sometimes enough, but two or three that
 cover the whole range of potential learners is better.  One of the
@@ -186,7 +186,7 @@ understanding of what a lesson is supposed to accomplish. For example,
 a statement like ``understand Git'' could mean any of the following,
 each of this would be backed by a very different lesson:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Learners can describe three scenarios in which version control
@@ -201,7 +201,7 @@ each of this would be backed by a very different lesson:
   Learners can explain what a detached HEAD is and recover from it
   using command-line operations.
 
-\end{itemize}
+\end{gitemize}
 
 \begin{callout}{Objectives vs.\ Outcomes}{callout:objectives-vs-outcomes}
 
