--- a/load.tex
+++ b/load.tex
@@ -35,7 +35,7 @@ More specifically, the theory of
 posits that people have to deal with three things when they're
 learning:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   \emph{Intrinsic} load is what people have to keep in mind in order to
@@ -55,7 +55,7 @@ learning:
   the way, such as knowing that tabs look like multiple characters but
   only count as one when indenting Python code.
 
-\end{itemize}
+\end{gitemize}
 
 According to this theory, searching for a solution strategy is an
 extra burden on top of applying that strategy. We can therefore
@@ -183,7 +183,7 @@ different categories: for example, how many times different colors
 appear in an image, or how many times different words appear in a
 paragraph of text.
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Create a short example (no more than 10 lines of code) that shows
@@ -203,7 +203,7 @@ paragraph of text.
   level it is intended for.  Once they have filled in the blanks, ask
   them what level they think it is for.
 
-\end{enumerate}
+\end{genumerate}
 
 If there are people among the trainees who don't program at all, make
 sure that they are in separate groups and ask to the groups to work
@@ -213,7 +213,7 @@ with that person as a learner to help identify different loads.
 
 \begin{challenge}{Create a Parson's Problem}{chal:parsons-problem}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Write five or six lines of code that does something useful, jumble
@@ -228,6 +228,6 @@ with that person as a learner to help identify different loads.
   it for your partner to put things in order when there's unneeded
   material getting in the way?
 
-\end{enumerate}
+\end{genumerate}
 
 \end{challenge}
