--- a/memory.tex
+++ b/memory.tex
@@ -25,7 +25,7 @@ connected.
 
 This metaphor helps explain many observed aspects of expert behavior:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Experts can jump directly from a problem to its solution because
@@ -58,7 +58,7 @@ This metaphor helps explain many observed aspects of expert behavior:
   interviews gives a more accurate impression of their ability than
   asking them to program.)
 
-\end{enumerate}
+\end{genumerate}
 
 \begin{callout}{The J Word}{callout:the-j-word}
 
@@ -157,7 +157,7 @@ usually (but not always) true as shown in
 
 Concept maps can be used in many ways:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Concept maps aid design of a lesson by helping authors figure out
@@ -188,7 +188,7 @@ Concept maps can be used in many ways:
   very useful in weekly lectures \emph{once learners are familiar with
   the technique}. \fixme{explain why}
 
-\end{enumerate}
+\end{genumerate}
 
 \begin{callout}{Meetings, Meetings, Meetings}{callout:meetings}
 
