--- a/motivation.tex
+++ b/motivation.tex
@@ -95,7 +95,7 @@ quick way to alienate a classroom and cause learners to tune out.
 
 Here are some quick ways to demotivate your learners:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Tell learners they are rubbish because they use Excel and/or Word,
@@ -134,7 +134,7 @@ Here are some quick ways to demotivate your learners:
   Recurse Center's
   \href{https://www.recurse.com/manual\#sec-environment}{Social Rules}).
 
-\end{itemize}
+\end{gitemize}
 
 \begin{callout}{Code of Conduct Revisited}{callout:conduct-revisited}
 
@@ -180,7 +180,7 @@ be particularly affected}.
 
 Two ways of dealing with your own impostor syndrome are:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Ask for feedback from someone you respect and trust. Ask them for
@@ -193,7 +193,7 @@ Two ways of dealing with your own impostor syndrome are:
   you learn from them? What habits can you borrow? (Remember, they
   quite possibly also feel as if they are making it up as they go.)
 
-\end{enumerate}
+\end{genumerate}
 
 As an instructor, you can help people with their impostor syndrome by
 sharing stories of mistakes that you have made or things you struggled
@@ -345,7 +345,7 @@ de nobis, sine nobis}} (literally, ``nothing about us, without us'')
 predates accessibility rights, but is always the right place to start.
 A few other recommendations are:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   \emph{Find out what you need to do.}
@@ -379,7 +379,7 @@ A few other recommendations are:
   in advance that your room is accessible via an elevator or ramp,
   etc.
 
-\end{itemize}
+\end{gitemize}
 
 \seclbl{Inclusivity}{sec:inclusivity}
 
@@ -397,7 +397,7 @@ marginalized or excluded groups, but help motivate everyone else as
 well; while they are phrased in terms of term-long courses, many can
 be applied in our workshops:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Ask learners to email you before the workshop to explain how they
@@ -419,7 +419,7 @@ be applied in our workshops:
   e.g., use of jargon or ``questions'' that are actually asked to
   display knowledge.
 
-\end{itemize}
+\end{gitemize}
 
 \seclbl{Teaching Practices}{sec:motivation-practices}
 
