--- a/novice.tex
+++ b/novice.tex
@@ -13,7 +13,7 @@ However, that shouldn't prevent us from making strong statements about
 what's true for the majority.}. For our purposes, we simplify this to
 three:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   A \emph{novice} is someone who doesn't know what they don't know,
@@ -37,7 +37,7 @@ three:
   out of the ordinary, diagnose the causes of problems, and so on. We
   will discuss expertise in more detail in \secref{sec:memory}.
 
-\end{itemize}
+\end{gitemize}
 
 One example of a mental model is the ball-and-spring model of
 molecules that most of us encountered in high school chemistry. Atoms
@@ -95,7 +95,7 @@ that just ain't so.''
 
 Broadly speaking, learners' misconceptions fall into three categories:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Simple \emph{factual errors}, such as believing that Vancouver is
@@ -114,7 +114,7 @@ Broadly speaking, learners' misconceptions fall into three categories:
   since they are deeply connected to the learner's social identity and
   often cannot be reasoned away.
 
-\end{itemize}
+\end{gitemize}
 
 Teaching is most effective when instructors have a way to identify and
 clear up learners' misconceptions \emph{while they are teaching}.  The
@@ -154,18 +154,18 @@ be:
 \begin{example}
 \noindent
 Q: what is 27 + 15 ?
-\begin{enumerate}
+\begin{genumerate}
 \item 42
 \item 32
 \item 312
 \item 33
-\end{enumerate}
+\end{genumerate}
 \end{example}
 
 The correct answer is 42, but each of the other answers provides
 valuable insight:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   If the child answers 32, she is throwing away the carry completely.
@@ -180,7 +180,7 @@ valuable insight:
   If she answers 33 then she knows she has to carry the 1, but is
   carrying it back into the same column it came from.
 
-\end{itemize}
+\end{gitemize}
 
 Each of these incorrect answers is a \emph{plausible distractor} with
 \emph{diagnostic power}.   ``Plausible'' means that it looks like it
@@ -236,7 +236,7 @@ programming \cite{bib:porter-what-works}. Peer instruction combines
 formative assessment with student discussion and looks something like
 this:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Give a brief introduction to the topic.
@@ -248,7 +248,7 @@ this:
 \item
   Have all the students vote on their answers to the MCQ.
 
-  \begin{enumerate}
+  \begin{genumerate}
 
   \item
     If the students all have the right answer, move on.
@@ -262,9 +262,9 @@ this:
     minutes to discuss those answers with one another in small groups
     (typically 2-4 students) and then reconvene and vote again.
 
-  \end{enumerate}
+  \end{genumerate}
 
-\end{enumerate}
+\end{genumerate}
 
 As \href{https://www.youtube.com/watch?t=1\&v=2LbuoxAy56o}{this video}
 shows, group discussion significantly improves students' understanding
@@ -284,7 +284,7 @@ learn---time that we don't have in our compressed two-day format.
 
 \begin{callout}{A Note on MCQ Design}{callout:a-note-on-mcq-design}
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   A good MCQ tests for conceptual misunderstanding rather than simple
@@ -299,7 +299,7 @@ learn---time that we don't have in our compressed two-day format.
   subject. If you haven't taught it before, think about your own
   misconceptions or ask colleagues about their experiences.
 
-\end{itemize}
+\end{gitemize}
 
 \end{callout}
 
@@ -345,7 +345,7 @@ checked, they put the green sticky note on their laptop; if they run
 into a problem and need help, the put up the red one. This is better
 than having people raise their hands because:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   it's more discreet (which means they're more likely to
@@ -358,7 +358,7 @@ than having people raise their hands because:
   the instructor can quickly see from the front of the room what
   state the class is in.
 
-\end{itemize}
+\end{gitemize}
 
 Sometimes a red sticky involves a technical problem that takes a bit
 more time to solve. To prevent this issue to slow down the whole class
