--- a/practices.tex
+++ b/practices.tex
@@ -16,7 +16,7 @@ coding, instructors don't use slides.  Instead, they through the
 lesson material, typing in the code or instructions, with their
 learners following along.  Its advantages are:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Watching a program being written is more compelling than watching
@@ -51,7 +51,7 @@ learners following along.  Its advantages are:
   talking about mistakes, learners will be more comfortable doing so
   too.
 
-\end{itemize}
+\end{gitemize}
 
 Live coding is an example of the ``I/We/You'' approach to teaching
 discussed in \chapref{sec:performance}.  It takes a bit of practice
@@ -71,7 +71,7 @@ virtual desktop while flipping back and forth to another.
 
 Here are some tips to make your live coding better:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   \emph{Be seen and heard.}  If you are physically able to stand up
@@ -220,7 +220,7 @@ Here are some tips to make your live coding better:
   helpers for feedback when you are unsure of the effect you behaviour
   has on the workshop.
 
-\end{enumerate}
+\end{genumerate}
 
 \seclbl{Pre-Assessment}{sec:practices-assessment}
 
@@ -245,7 +245,7 @@ estimate of their knowledge is.
 
 That said, there \emph{are} things we can do:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Before running a workshop, communicate its level clearly to everyone
@@ -268,7 +268,7 @@ That said, there \emph{are} things we can do:
   and intervene early so that they don't become frustrated and give
   up.
 
-\end{itemize}
+\end{gitemize}
 
 The most important thing is to accept that no class can possibly meet
 everyone's individual needs. If the instructor slows down to accommodate
@@ -366,7 +366,7 @@ in preparation for this workshop, explain in advance to your fellow
 trainee what you will be teaching and what the learners you teach it
 to are expected to be familiar with.
 
-\begin{itemize}
+\begin{gitemize}
 
   \item
     What felt different about live coding (vs.~standing up and
@@ -385,6 +385,6 @@ to are expected to be familiar with.
   \item
     What will you try to do differently next time?
 
-\end{itemize}
+\end{gitemize}
 
 \end{challenge}
