--- a/welcome.tex
+++ b/welcome.tex
@@ -23,7 +23,7 @@ Its aim is introduce you to what we actually know about teaching and
 learning, why we believe it is true, and how you can apply it.  We
 will look at:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   how people's thinking changes as they go from being novices to
@@ -44,7 +44,7 @@ will look at:
   how insights and techniques borrowed from the performing arts can
   make you a better teacher.
 
-\end{itemize}
+\end{gitemize}
 
 We can't cover everything you need to know to teach well.  In fact,
 we can barely scratch the surface.  But we hope that what we show you
@@ -136,7 +136,7 @@ apologize, and/or expel them, depending on the severity of the
 violation and whether or not you believe it was intentional.  Whatever
 you do:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   Do it in front of witnesses.  Most people will tone down their
@@ -149,7 +149,7 @@ you do:
   describe what happened.  Remember, a Code of Conduct is meaningless
   without a procedure for enforcing it.
 
-\end{itemize}
+\end{gitemize}
 
 A Code of Conduct cannot stop people from being offensive, any more
 than laws against theft stop people from stealing. What it \emph{can}
@@ -177,7 +177,7 @@ more \cite{bib:orndorff-note-taking}, even though taking notes on a
 computer is generally less effective than taking notes using pen and
 paper \cite{bib:mueller-note-taking}.  Taking notes collaboratively:
 
-\begin{itemize}
+\begin{gitemize}
 
 \item
   It allows people to compare what they think they're hearing with
@@ -205,7 +205,7 @@ paper \cite{bib:mueller-note-taking}.  Taking notes collaboratively:
   discover that the class didn't hear something important, or
   misunderstood it.
 
-\end{itemize}
+\end{gitemize}
 
 We usually use \href{http://etherpad.org}{Etherpad} for collaborative
 note-taking, though many instructors have shifted to
@@ -233,7 +233,7 @@ questionnaire like the one below.  It doesn't tell us everything we
 might want to know, but it does give trainers a pretty clear idea of
 who they're speaking to.
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Have you ever participated in a Software Carpentry or Data Carpentry
@@ -325,7 +325,7 @@ who they're speaking to.
   Why do you want to take this training course?\\
   \line(1,0){275}
 
-\end{enumerate}
+\end{genumerate}
 
 \seclbl{Challenges}{sec:welcome-challenges}
 
