--- a/performance.tex
+++ b/performance.tex
@@ -205,7 +205,7 @@ and what isn't.
 
 There are several things you can do to make feedback more effective:
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   \emph{Initiate feedback.} It's better to ask for feedback than to
@@ -244,7 +244,7 @@ There are several things you can do to make feedback more effective:
   thought of ourselves \emph{before} getting feedback from others,
   so that \fixme{normalize}.
 
-\end{enumerate}
+\end{genumerate}
 
 The technique we find most useful for giving feedback is to create a
 $2{\times}2$ grid and put each piece of feedback in one of its four
@@ -281,7 +281,7 @@ coach.
 
 \begin{challenge}{Giving Feedback}{chal:giving-feedback}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Watch \href{https://www.youtube.com/watch?v=-ApVt04rB4U}{this video}
@@ -292,13 +292,13 @@ coach.
 \item
   \fixme{add all feedback to the whiteboard}
 
-\end{enumerate}
+\end{genumerate}
 
 \end{challenge}
 
 \begin{challenge}{Feedback on Your Teaching}{chal:feedback}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Split into groups of three.
@@ -327,6 +327,6 @@ coach.
   also to identify each person's tells: what do they do that betrays
   nervousness, and how noticeable is it?
 
-\end{enumerate}
+\end{genumerate}
 
 \end{challenge}
