--- a/rules.tex
+++ b/rules.tex
@@ -1,6 +1,6 @@
 \chapter*{The Rules}
 
-\begin{enumerate}
+\begin{genumerate}
 
 \item
   Be kind: all else is details.
@@ -34,4 +34,4 @@
 \item
   You can't help everyone, but you can always help someone.
 
-\end{enumerate}
+\end{genumerate}
