--- a/book.tex
+++ b/book.tex
@@ -21,11 +21,15 @@
 \include{motivation}
 
 \bibliographystyle{annotate}
+\begingroup
+\raggedright
 \bibliography{book}
+\endgroup
 
 \appendix
 
 \include{conduct}
+\include{license}
 \include{checklists}
 \include{guide}
 
