--- a/guide.tex
+++ b/guide.tex
@@ -59,7 +59,7 @@ This appendix includes material that doesn't naturally fit anywhere else.
 
 To begin your class, the instructors should give a brief introduction
 that will convey their capacity to teach the material,
-accessibility/approachability, desire for student success, and
+accessibility and approachability, desire for student success, and
 enthusiasm. Tailor your introduction to the students' skill level so
 that you convey competence (without seeming too advanced) and
 demonstrate that you can relate to the students. Throughout the
