--- a/guide.tex
+++ b/guide.tex
@@ -385,11 +385,67 @@ geographically distributed.
 
 Henderson et al's
 ``Facilitating Change in Undergraduate STEM Instructional Practices''
-\cite{bib:henderson-facilitating}
-discusses ways to get educational institutions to actually change what
-they teach.  Their findings are summarized in this table:
+\cite{bib:henderson-facilitating} discusses ways to get educational
+institutions to actually change what they teach.  Their findings are
+summarized in \tblref{tbl:change}, and the approaches they identify
+are:
 
-\begin{tabular}{lll}
+\begin{gitemize}
+
+\item
+  \emph{Diffusion}: STEM undergraduate instruction will be changed by
+  altering the behavior of a large number of individual
+  instructors. The greatest influences for changing instructor
+  behavior lie in optimizing characteristics of the innovation and
+  exploiting the characteristics of individuals and their networks.
+
+\item
+  \emph{Implementation}: STEM undergraduate instruction will be
+  changed by developing research-based instructional ``best
+  practices'' and training instructors to use them. Instructors must
+  use these practices with fidelity to the established standard.
+
+\item
+  \emph{Scholarly Teaching}: STEM undergraduate instruction will be
+  changed when more individual faculty members treat their teaching as
+  a scholarly activity.
+
+\item
+  \emph{Faculty Learning Communities}: STEM undergraduate instruction
+  will be changed by groups of instructors who support and sustain
+  each other's interest, learning, and reflection on their teaching.
+
+\item
+  \emph{Quality Assurance}: STEM undergraduate instruction will be
+  changed by requiring institutions (colleges, schools, departments,
+  and degree programs) to collect evidence demonstrating their success
+  in undergraduate instruction. What gets measured is what gets
+  improved.
+
+\item
+  \emph{Organizational Development}: STEM undergraduate instruction
+  will be changed by administrators with strong vision who can develop
+  structures and motivate faculty to adopt improved instructional
+  practices.
+
+\item
+  \emph{Learning Organizations}: Innovation in higher education STEM
+  instruction will occur through informal communities of practice
+  within formal organizations in which individuals develop new
+  organizational knowledge through sharing implicit knowledge about
+  their teaching.  Leaders cultivate conditions for both formal and
+  informal communities to form and thrive.
+
+\item
+  \emph{Complexity Leadership}: STEM undergraduate instruction is
+  governed by a complex system. Innovation will occur through the
+  collective action of self-organizing groups within the system. This
+  collective action can be stimulated, but not controlled.
+
+\end{gitemize}
+
+\begin{tbllbl}{Strategies for Facilitating Educational Change}{tbl:change}
+\begin{tabular}{|p{\dimexpr 0.2\linewidth-2\tabcolsep}|p{\dimexpr 0.4\linewidth-2\tabcolsep}|p{\dimexpr 0.4\linewidth-2\tabcolsep}|}
 
 \textbf{Aspect of System to be Changed}
 &
@@ -447,62 +503,7 @@ they teach.  Their findings are summarized in this table:
   \emph{Complexity Leadership}
 \\
 \end{tabular}
-
-The eight italicized approaches are:
-
-\begin{gitemize}
-
-\item
-  \emph{Diffusion}: STEM undergraduate instruction will be changed by
-  altering the behavior of a large number of individual
-  instructors. The greatest influences for changing instructor
-  behavior lie in optimizing characteristics of the innovation and
-  exploiting the characteristics of individuals and their networks.
-
-\item
-  \emph{Implementation}: STEM undergraduate instruction will be
-  changed by developing research-based instructional ``best
-  practices'' and training instructors to use them. Instructors must
-  use these practices with fidelity to the established standard.
-
-\item
-  \emph{Scholarly Teaching}: STEM undergraduate instruction will be
-  changed when more individual faculty members treat their teaching as
-  a scholarly activity.
-
-\item
-  \emph{Faculty Learning Communities}: STEM undergraduate instruction
-  will be changed by groups of instructors who support and sustain
-  each other's interest, learning, and reflection on their teaching.
-
-\item
-  \emph{Quality Assurance}: STEM undergraduate instruction will be
-  changed by requiring institutions (colleges, schools, departments,
-  and degree programs) to collect evidence demonstrating their success
-  in undergraduate instruction. What gets measured is what gets
-  improved.
-
-\item
-  \emph{Organizational Development}: STEM undergraduate instruction
-  will be changed by administrators with strong vision who can develop
-  structures and motivate faculty to adopt improved instructional
-  practices.
-
-\item
-  \emph{Learning Organizations}: Innovation in higher education STEM
-  instruction will occur through informal communities of practice
-  within formal organizations in which individuals develop new
-  organizational knowledge through sharing implicit knowledge about
-  their teaching.  Leaders cultivate conditions for both formal and
-  informal communities to form and thrive.
-
-\item
-  \emph{Complexity Leadership}: STEM undergraduate instruction is
-  governed by a complex system. Innovation will occur through the
-  collective action of self-organizing groups within the system. This
-  collective action can be stimulated, but not controlled.
-
-\end{gitemize}
+\end{tbllbl}
 
 \seclbl{Why We Are Not a MOOC}{sec:why-were-not-a-mooc}
 
@@ -511,6 +512,13 @@ The eight italicized approaches are:
   \\
   --- variously attributed
 \end{quote}
+
+Massive open online courses (MOOCs) in which students watch videos
+instead of attending lectures, and then do assignments that are
+(usually) robo-graded, were a hot topic a few years ago.  Now that the
+hype has worn off, though, it's clear that they aren't as effective as
+their more enthusiastic proponents claimed they would
+be \cite{bib:ubell-moocs}.
 
 Recorded content is ineffective for most novices learners because it
 cannot intervene to clear up specific learners' misconceptions. Some
