--- a/guide.tex
+++ b/guide.tex
@@ -381,10 +381,11 @@ geographically distributed.
 
 \seclbl{Effecting Change}{sec:effecting-change}
 
-\fixme{intro}
-
-Henderson et al's
-``Facilitating Change in Undergraduate STEM Instructional Practices''
+This guide is aimed primarily at people working outside mainstream
+educational institutions, but in order for us to reach and help as
+many people as possible, we must eventually find ways to work with
+schools as they are.  Henderson et al's ``Facilitating Change in
+Undergraduate STEM Instructional Practices''
 \cite{bib:henderson-facilitating} discusses ways to get educational
 institutions to actually change what they teach.  Their findings are
 summarized in \tblref{tbl:change}, and the approaches they identify
